--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -143,13 +143,13 @@ p.pageTitle{
 .toggle-button {
 	position: absolute;
 	right: 10px;
-	top: 10px;
+	top: 25px;
 	z-index: 1000;
 	line-height: 0px;
 }
 .toggle-button i.fa {
 	color: #4ba61d;
-	font-size: 16px;
+	font-size: 24px;
 }
 
 .btn-menu {
@@ -693,4 +693,8 @@ input.error{ color:#B00; background-color:#FDD }
 }
 .form-group.col-xs-6.last {
     padding-right: 0;
+}
+
+li.menu-heading:first-child {
+    padding-top: 20px;
 }
