--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -60,6 +60,15 @@ html,body {
   left: 0;
 }
 
+.sidebar-nav .badge {
+	background-color: #2F2F2F;
+	font-size: 12px;
+	font-weight: normal;
+	margin-left: 10px;
+
+	display: inline;
+}
+
 html >.content {
   width: 100%;
 }
@@ -172,12 +181,26 @@ p.pageTitle{
 	margin-bottom: 105px;
 }
 #bottom-bar {
-	position:fixed;
+   position:fixed;
    left:0px;
    bottom:0px;
    /*height:30px;*/
    width:100%;
    background:#4ba61d;
+   z-index: 9999;
+}
+.for-icon {
+	display: inline-block;
+	position: relative;
+}
+#bottom-bar .badge {
+	background-color: #fF2F2F; 
+	font-size: 12px;
+	padding: 5px 7px 3px;
+	font-weight: normal;
+	/*position: absolute;
+	right: -7px;
+	top: -4px;*/
 }
 .page-title {
 	text-transform: uppercase;
@@ -701,3 +724,237 @@ li.menu-heading:first-child {
 
 button.close span{ font-size:34px; }
 .modal-dialog{ margin-top:30px; }
+
+	/* Settings Page */
+
+#setting-form {
+	margin-top: 30px;
+}
+#setting-form .row {
+	margin:0px;
+}
+#setting-form .form-group:first-child {
+	border-top:1px solid #dedede;
+}
+#setting-form .form-group {
+	margin-bottom: 0px;
+	padding: 8px 0px 10px;
+	border-bottom: 1px solid #dedede;
+}
+#setting-form label {
+	font-family: 'Proxima Nova Rg';
+	font-weight: normal;
+	margin-bottom: 0px;
+	font-size: 16px;
+	text-align: left;
+	margin-top: 0px;
+	padding-top: 0px;
+}
+.no-right-padding {
+	padding-right: 0px;
+}
+#setting-form label .setting-info {
+	display: block;
+	line-height: 1.2em;
+}
+
+	/* Switch */
+
+.Switch {
+	position: relative;
+	display: inline-block;
+	color: #ccc;
+	text-shadow: 0px 1px 1px rgba(255,255,255,0.8);
+	height: 26px;
+	padding: 6px 6px 5px 6px;
+	border: 1px solid #ccc;
+	border: 1px solid rgba(0,0,0,0.2);
+	border-radius: 4px;
+	background: #F9F9F9;
+	box-shadow: 0px 0px 4px rgba(0,0,0,0.1), inset 0px 1px 3px 0px rgba(0,0,0,0.1);
+	cursor: pointer;
+	margin-top: 2px;
+}
+body.IE7 .Switch { width: 78px; }
+.Switch span {
+	display: inline-block;
+	width: 35px;
+}
+.Switch span.On { color: #4ba61d; }
+.Switch .Toggle {
+	position: absolute;
+	top: 0px;
+	width: 37px;
+	height: 25px;
+	border: 1px solid #ccc;
+	border: 1px solid rgba(0,0,0,0.3);
+	border-radius: 4px;
+	background: #fff;	
+	box-shadow: inset 0px 1px 0px 0px rgba(255,255,255,0.5);
+	z-index: 0;
+	-webkit-transition: all 0.15s ease-in-out;
+	-moz-transition: all 0.15s ease-in-out;
+	-o-transition: all 0.15s ease-in-out;
+	-ms-transition: all 0.15s ease-in-out;
+}
+.Switch.On .Toggle { left: -2px; }
+.Switch.Off .Toggle { left: 40%; }
+
+/* Round Switch */
+.Switch.Round {
+	padding: 0px 20px;
+	border-radius: 40px;
+}
+body.IE7 .Switch.Round { width: 1px; }
+.Switch.Round .Toggle {
+	border-radius: 40px;
+	width: 24px;
+	height: 24px;
+}
+.Switch.Round.Off .Toggle {
+	left: -2px;	
+}
+.Switch.Rounnd.Off {
+	background: #4ba61d !important;	
+}
+.Switch.Round.Off .Toggle { left: 45%; }
+
+	/* Settings Page */
+
+	/* Notification Page */
+
+#notification-container {
+	margin-top: 30px;
+}
+#notification-container .media:first-child {
+	border-top: 1px solid #dedede;
+	padding-top: 15px;
+	box-shadow: 0 0px 23px -22px rgba(0, 0, 0, 0.8) inset, 0 -20px 0px -22px rgba(0, 0, 0, 0.8) inset;
+	-webkit-box-shadow: 0 0px 23px -22px rgba(0, 0, 0, 0.8) inset, 0 -20px 0px -22px rgba(0, 0, 0, 0.8) inset;
+	-moz-box-shadow: 0 0px 23px -22px rgba(0, 0, 0, 0.8) inset, 0 -20px 0px -22px rgba(0, 0, 0, 0.8) inset;
+}
+#notification-container .media {
+	border-bottom: 1px solid #dedede;
+	padding-top: 15px;
+	margin-top: 0px;
+	box-shadow: 0 11px 23px -22px rgba(0, 0, 0, 0.8) inset, 0 -20px 5px -22px rgba(0, 0, 0, 0.8) inset;
+	-webkit-box-shadow: 0 11px 23px -22px rgba(0, 0, 0, 0.8) inset, 0 -20px 5px -22px rgba(0, 0, 0, 0.8) inset;
+	-moz-box-shadow: 0 11px 23px -22px rgba(0, 0, 0, 0.8) inset, 0 -20px 5px -22px rgba(0, 0, 0, 0.8) inset;	
+}
+#notification-container .media .media-left {
+	padding: 0px 15px;
+}
+#notification-container .media .media-left .notifi-img {
+	width: 36px;
+	display: inline-block;
+}
+#notification-container .media .media-left i.fa {
+	font-size: 20px;
+}
+.media-body {
+	padding-right: 15px;
+}
+#notification-container .media .media-body h3 {
+	margin-top: 0px;
+	font-weight: normal;
+	font-size: 20px;
+	color: #4ba61d;
+	margin-bottom:5px;
+}
+#notification-container .media .media-body p {
+	font-size: 15px;
+	line-height: 1.4em;
+}
+
+body {
+  margin: 0;
+}
+.loader {
+  position: absolute;
+  top: 50%;
+  left: 40%;
+  margin-left: 10%;
+  transform: translate3d(-50%, -50%, 0);
+}
+.dot {
+  width: 24px;
+  height: 24px;
+  background: #3ac;
+  border-radius: 100%;
+  display: inline-block;
+  animation: slide 1s infinite;
+}
+.dot:nth-child(1) {
+  animation-delay: 0.1s;
+  background: #32aacc;
+}
+.dot:nth-child(2) {
+  animation-delay: 0.2s;
+  background: #64aacc;
+}
+.dot:nth-child(3) {
+  animation-delay: 0.3s;
+  background: #96aacc;
+}
+.dot:nth-child(4) {
+  animation-delay: 0.4s;
+  background: #c8aacc;
+}
+.dot:nth-child(5) {
+  animation-delay: 0.5s;
+  background: #faaacc;
+}
+@-moz-keyframes slide {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    opacity: 0.3;
+    transform: scale(2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@-webkit-keyframes slide {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    opacity: 0.3;
+    transform: scale(2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@-o-keyframes slide {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    opacity: 0.3;
+    transform: scale(2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes slide {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    opacity: 0.3;
+    transform: scale(2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+
+
+li.isChef, li.noChef{ display:none }
+
+
