--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -187,7 +187,7 @@ p.pageTitle{
    /*height:30px;*/
    width:100%;
    background:#4ba61d;
-   z-index: 9999;
+   z-index: 999;
 }
 .for-icon {
 	display: inline-block;
@@ -958,3 +958,48 @@ body {
 li.isChef, li.noChef{ display:none }
 
 
+.TogActive{
+	font-weight:bold;
+}
+
+
+/* .modal-fullscreen */
+.modal-fullscreen {
+  background: transparent;
+}
+.modal-fullscreen .modal-content {
+  background: transparent;
+  border: 0;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+.modal-backdrop.modal-backdrop-fullscreen {
+  background: #ffffff;
+}
+.modal-backdrop.modal-backdrop-fullscreen.in {
+  opacity: .97;
+  filter: alpha(opacity=97);
+}
+/* .modal-fullscreen size: we use Bootstrap media query breakpoints */
+.modal-fullscreen .modal-dialog {
+  margin: 0;
+  margin-right: auto;
+  margin-left: auto;
+  width: 100%;
+}
+@media (min-width: 768px) {
+  .modal-fullscreen .modal-dialog {
+    width: 750px;
+  }
+}
+@media (min-width: 992px) {
+  .modal-fullscreen .modal-dialog {
+    width: 970px;
+  }
+}
+@media (min-width: 1200px) {
+  .modal-fullscreen .modal-dialog {
+     width: 1170px;
+  }
+}
+/* End .modal-fullscreen */
